# opreturn_indexer

./: .gitignore  Cargo.toml  Design_Document.md  README.md
migrations/ 2024XXXXXX_create_blocks_and_transactions/: up.sql
src/: api.rs  bitcoin_client.rs  db.rs  main.rs  schema.rs
