[package]
name = "opreturn_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.15.0"
rocket = { version = "0.5.0-rc.1", featuers = ["json"], features = ["json"] }
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
diesel = {version = "2.2.0", features = ["postgres","r2d2","chrono"]}
dotenv = "0.15.0"
log = "0.4.22"
env_logger = "0.11.5"